--- a/_posts/2019-05-23-active0.md
+++ b/_posts/2019-05-23-active0.md
@@ -1,8 +1,9 @@
 ---
-layout: blog
-title: Crackers
----
-
+layout: generic
+title: Cookies
+subtitle: These are really yummy.
+featured-image: pic03.jpg
+---		
 
 
 peanut
