--- a/_posts/2019-05-24-test.md
+++ b/_posts/2019-05-24-test.md
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: Cookies
-featured-images: images/pic02.jpg
-
----
+layout: generic
+title: Ice Cream
+subtitle: This is Terrible
+featured-image: pic03.jpg
+---		
 
 
 peanut
