--- a/_posts/2019-05-26-active.md
+++ b/_posts/2019-05-26-active.md
@@ -1,7 +1,9 @@
 ---
-layout: blog
-title: Test
----
+layout: generic
+title: Mac and Cheese
+subtitle: Never Gonna Work
+featured-image: pic03.jpg
+---		
 
 cookie
 adsfadsfdasf  ladskf;ladskfl;
