--- a/_posts/2020-03-13-Pizza.md
+++ b/_posts/2020-03-13-Pizza.md
@@ -4,6 +4,7 @@ title: Pizza
 subtitle: Friday Night is Pizza Night!
 featured-image: Pizza-Out-of-Oven.jpg
 alt: Pizza out of oven
+comments: true
 ---
 This recipe is very easy to do and the best part is you can prep it ahead of time (like nap time). Enjoy!
 
