--- a/_posts/2020-03-13-Pizza.md
+++ b/_posts/2020-03-13-Pizza.md
@@ -4,11 +4,11 @@ title: Pizza
 subtitle: Friday Night is Pizza Night!
 featured-image: Pizza-Out-of-Oven.jpg
 alt: Pizza out of oven
+image: Pizza-Out-of-Oven.jpg
+description: I want to share our pizza recipe. My husband’s part always includes mozzarella. I generally do sheep & goat’s milk feta on mine. I use any leftover meat we have from the week as a topping.
 tags:   [ Recipes, Gluten-Free, Paleo ]
 comments: true
 ---
-This recipe is very easy to do and the best part is you can prep it ahead of time (like nap time). Enjoy!
-
 * 1 Caulipower paleo pizza crust
 * ½ Rao’s marinara sauce
 * 1-2 cups organic mozzarella cheese
