--- a/404.md
+++ b/404.md
@@ -1,5 +1,5 @@
 ---
-layout: blog
+layout: default
 title: Page Not Found
 subtitle: Please choose a destination from the menu
 permalink: /404.html
