--- a/_posts/2020-03-13-Pizza.md
+++ b/_posts/2020-03-13-Pizza.md
@@ -3,7 +3,7 @@ layout: blog
 title: Pizza
 subtitle: Friday Night is Pizza Night!
 featured-image: Blog/Pizza-Out-of-Oven_cqyksx.jpg
-image: Blog/Pizza-Out-of-Oven_cqyksx.jpg
+image: https://res.cloudinary.com/rockmonkey/image/upload/v1598394645/Blog/Pizza-Out-of-Oven_cqyksx.jpg
 alt: Pizza Out of Oven
 description: I want to share our pizza recipe. My husband’s part always includes mozzarella. I generally do sheep & goat’s milk feta on mine. I use any leftover meat we have from the week as a topping.
 tags:   recipes gluten-free paleo
